--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-body{
-}
+
+
 span{
     display:inline-block;
-    background:linear-gradient(to left, blue,pink);
+    background:linear-gradient(to top, blue,purple);
     background-clip:text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
