--- a/style.css
+++ b/style.css
@@ -25,3 +25,10 @@ body{
     grid-template-columns: 20% 20%;
     justify-content: center;
 }
+.card:hover p, .card:hover h5{
+    display:inline-block;
+    background:linear-gradient(to top, blue,purple);
+    background-clip:text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
