--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ body{
     grid-template-columns: 20% 20%;
     justify-content: center;
 }
+p{
+    text-align:justify;
+}
 .card:hover p, .card:hover h5{
     display:inline-block;
     background:linear-gradient(to top, blue,purple);
