--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@400;700&display=swap');
 
 span{
     display:inline-block;
@@ -8,24 +9,47 @@ span{
     -webkit-text-fill-color: transparent;
 }
 :root{
-    --main:#17143A;
+    --header:#17143A;
 
 }
 
 body{
 
-    background-color: var(--main);
+    background-color: var(--header);
     color:white;
     font-family:'Playfair';
+    background-image: url("images/bg.png");
+    background-repeat: no-repeat;    
 }
+main{
+    padding:3%;
+}
+article h2{
+    margin-bottom:2%;
+
+}
+.sections_index{
+    display:flex;
+    justify-content: space-around;
+}
+.sections_index section{
+    width:40%;
+}
+
 .container_grid{
     display:grid;
     column-gap: 20%;
-    row-gap:50%;
+    row-gap: 30%;
     grid-template-columns: 20% 20%;
     justify-content: center;
 }
+.container_carousel{
+    width:70%;
+    margin:auto;
+    margin-bottom:5%;
+}
 p{
+    font-family: 'Roboto Flex';
     text-align:justify;
 }
 .card:hover p, .card:hover h5{
@@ -35,18 +59,54 @@ p{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+header {
+    width: 50%;
+    margin: auto;
+    display: flex;
+    top: 0;
+}
+
+header img {
+    width: 35%;
+}
+
 header nav{
     display:flex;
     justify-content: space-between;
-    width:50%;
-    
+    width: 50%;
+    align-items: center;
 }
-header{
-    width:50%;
+.actus h1{
     margin:auto;
+    width:fit-content;
+    margin-bottom:10%;
+    font-size:76px;
+    border-bottom:solid;
+}
+header nav a, section  article a{
+    background-color: gray;
+    height: min-content;
+    width: max-content;
+    border-radius: 20px;
+    text-decoration: none;
+    padding:10px;
+    color:black;
 }
 
-.dropdown-item:hover{
-    background-color: var(--main);
-    color:white;
+header nav a:hover{
+    background-color: rgb(112, 111, 111);
+}
+header nav a:active{
+    background-color: rgb(100, 99, 99);
+}
+
+figure{
+    justify-self:center;
+}
+figure img{
+    border-radius:5px;
+}
+figcaption{
+    justify-self:center;
 }
