--- a/style.css
+++ b/style.css
@@ -118,3 +118,48 @@ footer p {
     font-size:76px;
     border-bottom:solid;
 }
+
+.histoire article div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5em;
+}
+
+.histoire article div p {
+    width: 50%;
+}
+
+.histoire figcaption {
+    text-align: center;
+}
+
+.histoire iframe {
+    border-radius: 20px;
+}
+
+.histoire .origines h2 {
+    margin-bottom: 0;
+}
+
+.histoire .origines p {
+    margin-top: 0;
+}
+
+.histoire .origines {
+    display: flex;
+    flex-direction: column;
+}
+
+.histoire .decembre {
+    width: 50%;
+}
+
+.histoire .decembre, .histoire .origines {
+    margin: auto;
+    margin-top: 5%;
+}
+
+.histoire .decembre p {
+    margin: auto;
+}
