--- a/style.css
+++ b/style.css
@@ -52,6 +52,9 @@ header {
     display: flex;
 
     margin: 0;
+    padding: 2em;
+
+    width: 100%;
 
     flex-direction: column;
     align-items: center;
