--- a/style.css
+++ b/style.css
@@ -162,12 +162,29 @@ footer p {
     margin-left:290px;
 }
 
-main{
-    padding:5%; 
+.main_histoire{
+    padding:5%;
+    padding-bottom:0;
+
 }
 .decembre p{
     margin-left:100%;
+    height:15em;
+
 }
 .histoire .decembre p {
     margin: auto;
+}
+.histoire{
+    height:max-content;
+}
+.main_histoire .bouton{
+    text-decoration: none;
+    padding:1.5%;
+    background-color:white ;
+    color:#17143A;
+    border-radius:20px;
+    
+    margin-left:30%;
+    
 }
