--- a/styleLilian.css
+++ b/styleLilian.css
@@ -196,3 +196,42 @@ main {
   font-size: 36px;
   margin: 0;
 }
+header {
+  display: flex;
+
+  margin: 0;
+  padding: 2em;
+
+  width: 100%;
+
+  flex-direction: column;
+  align-items: center;
+}
+
+header nav {
+  margin: 2em;
+}
+
+header nav a {
+  margin: 0 2em;
+  font-size: 1.2rem;
+  font-family: 'Roboto Flex';
+}
+
+header img {
+  width: 150px;
+}
+
+header nav a, section article a{
+  height: min-content;
+  width: max-content;
+  text-decoration: none;
+  color:white;
+}
+
+header nav a:hover{
+  background-color: rgb(112, 111, 111);
+}
+header nav a:active{
+  background-color: rgb(100, 99, 99);
+}
